tests/snapshots/examples_fixtures/services__async_demo.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/services/async_demo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
