tests/snapshots/examples_fixtures/services__todo_api.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/services/todo_api.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
